--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
-<div class="bgimg">
-    <div class="topleft">
-      <p>Logo</p>
-    </div>
-    <div class="middle">
-      <h1>COMING SOON</h1>
-      <hr>
-      <p>35 days</p>
-    </div>
-    <div class="bottomleft">
-      <p>Some text</p>
-    </div>
-  </div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CAT Environmental</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
+    <body>
+        <script src ="index.js"></script>
+        <div class="bgimg">
+            <div class="topleft">
+                <p>Logo</p>
+            </div>
+            <div class="middle">
+                <h1>COMING SOON</h1>
+                <hr>
+                <p>35 days</p>
+            </div>
+            <div class="bottomleft">
+                <p>Some text</p>
+            </div>
+        </div>
+    </body>
+
+</html>
