--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="middle">
                 <h1>COMING SOON</h1>
                 <hr>
-                <p>35 days</p>
+                <p id="demo" style="font-size:30px"></p>
             </div>
             <div class="bottomleft">
                 <p>Some text</p>
