--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src ="index.js"></script>
         <div class="bgimg">
             <div class="topleft">
-                <p>Logo</p>
+                <img src="Logo.jpg" alt="CAT ENV">
             </div>
             <div class="middle">
                 <h1>COMING SOON</h1>
@@ -16,7 +16,9 @@
                 <p id="demo" style="font-size:30px"></p>
             </div>
             <div class="bottomleft">
-                <p>Some text</p>
+                <p>Contact us: 
+                <a href="mailto:info@gocatenv.com" target="_top">info@gocatenv.com</a>
+                </p>
             </div>
         </div>
     </body>
