--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src ="index.js"></script>
         <div class="bgimg">
             <div class="topleft">
-                <img src="Logo.jpg" alt="CAT ENV">
+                <img src="Logo.jpg" alt="CAT ENV" height="40" width="100">
             </div>
             <div class="middle">
                 <h1>COMING SOON</h1>
