--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src ="index.js"></script>
         <div class="bgimg">
             <div class="topleft">
-                <img src="Logo.jpg" alt="CAT ENV" height="137" width="300">
+                <img src="Logo.jpg" alt="CAT ENV" height="91" width="200">
             </div>
             <div class="middle">
                 <h1>COMING SOON</h1>
@@ -17,7 +17,7 @@
             </div>
             <div class="bottomleft">
                 <p>Contact us: 
-                <a href="mailto:info@gocatenv.com" target="_top">info@gocatenv.com</a>
+                <a href="mailto:info@gocatenv.com" target="_top" style="color: #ffffff">info@gocatenv.com</a>
                 </p>
             </div>
         </div>
